--- a/Angular/Angular-Music/src/app/menu/menu.component.html
+++ b/Angular/Angular-Music/src/app/menu/menu.component.html
@@ -12,7 +12,7 @@
     </div>
    
     <div>
-       <a mat-button routerLink="">Pjesme</a>
+       <a mat-button routerLink="pjesma">Pjesme</a>
    </div>
     
  
