--- a/Angular/Angular-Music/src/app/Pjesma/pjesma-forma/pjesma-forma.component.html
+++ b/Angular/Angular-Music/src/app/Pjesma/pjesma-forma/pjesma-forma.component.html
@@ -1,36 +1,46 @@
-<div *ngIf="dodajPjesmu!=null && dodajPjesmu.prikazi" class="modal fade show" id="exampleModalLive" tabindex="-1" aria-labelledby="exampleModalLiveLabel" aria-modal="true" role="dialog" style="display: block;">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h2 class="modal-title" id="exampleModalLiveLabel">Dodaj pjesmu</h2>
-          <button type="button" class="btn-close" (click)="dodajPjesmu.prikazi = false" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <div class="mb-3">
-                <label class="form-label">Ime pjesme</label>
-                <input class="form-control" [(ngModel)]="dodajPjesmu.naziv"  placeholder="Ime pjesme">
-              </div>
-              <div class="mb-3">
-                <label class="form-label">Ime izvođača</label>
-                <input class="form-control" [(ngModel)]="dodajPjesmu.nazivIzvodjaca"  placeholder="Ime izvođača">
-              </div>
-              <div class="mb-3">
-                <label class="form-label">Url</label>
-                <input class="form-control" [(ngModel)]="dodajPjesmu.url"  placeholder="Url">
-              </div>
+<form (ngSubmit)="saveChanges()" [formGroup]="form">
+  <mat-form-field appearance="outline">
+      <mat-label>*Naziv</mat-label>
+      <input formControlName="naziv" matInput />
+      <mat-error>Morate unijeti naziv pjesme</mat-error>
+  </mat-form-field>
 
-              <div class="mb-3">
-                <label class="form-label">Kategorija</label>
-                <select class="form-control" [(ngModel)]="dodajPjesmu.kategorija_id" >
-                  <option *ngFor="let x of kategorije" value="{{x.id}}">{{x.ime}}</option>
-                </select>
-              </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" (click)="dodajPjesmu.prikazi = false" >Close</button>
-          <button type="button" class="btn btn-primary" (click)="snimi()">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
+  <mat-form-field appearance="outline">
+    <mat-label>Naziv izvođača</mat-label>
+    <input formControlName="nazivIzvodjaca" matInput />
+</mat-form-field>
+
+<mat-form-field appearance="outline">
+  <mat-label>Url</mat-label>
+  <input formControlName="url" matInput />
+</mat-form-field>
+
+
+
+<mat-form-field appearance="outline">
+  <mat-label>Ocjena</mat-label>
+  <input formControlName="ocjena" matInput />
+</mat-form-field>
+
+
+<div class="mb-3">
+  <label class="form-label">Kategorija</label>
+  <select class="form-control">
+    <option *ngFor="let x of kategorije" value="{{x.id}}">{{x.ime}}</option>
+  </select>
+</div>
+
+
+
+
+ <div>
+     <button mat-flat-button color="primary" [disabled]="form.invalid">Snimi</button>
+ </div>
+
+
+
+
+
+</form>
+
 
