--- a/Angular/Angular-Music/src/app/Pjesma/pjesma-edit/pjesma-edit.component.html
+++ b/Angular/Angular-Music/src/app/Pjesma/pjesma-edit/pjesma-edit.component.html
@@ -18,6 +18,14 @@
                 <label class="form-label">Url</label>
                 <input class="form-control" [(ngModel)]="urediPjesmu.url"  placeholder="Url">
               </div>
+              <div class="mb-3">
+                <label class="form-label">Ocjena</label>
+                <input class="form-control" [(ngModel)]="urediPjesmu.ocjena"  placeholder="Url">
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Favorit</label>
+                <input class="form-check-input" type="checkbox" [(ngModel)]="urediPjesmu.favorit" id="flexCheckDefault">
+              </div>
 
               <div class="mb-3">
                 <label class="form-label">Kategorija</label>
