--- a/Angular/Angular-Music/src/app/Pjesma/pjesma-index/pjesma-index.component.html
+++ b/Angular/Angular-Music/src/app/Pjesma/pjesma-index/pjesma-index.component.html
@@ -17,13 +17,14 @@
 
             <ng-container matColumnDef="nazivIzvodjaca">
                 <th mat-header-cell *matHeaderCellDef>Naziv izvođača</th>
-                <td mat-cell *matCellDef="let element">{{element.nazivIzvodjaca}}</td>
+                <td mat-cell *matCellDef="let element ">{{element.nazivIzvodjaca}}</td>
 
             </ng-container>
 
             <ng-container matColumnDef="url">
                 <th mat-header-cell *matHeaderCellDef>Url</th>
-                <td mat-cell *matCellDef="let element">{{element.url}}</td>
+                <td mat-cell *matCellDef="let element"><a href="{{element.url}}" target="_blank"><mat-icon>play_circle_outline</mat-icon></a></td>
+                  
 
             </ng-container>
             <ng-container matColumnDef="ocjena">
@@ -73,7 +74,8 @@
             
 
 <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-<tr mat-row *matRowDef="let row; columns:columnsToDisplay"></tr>
+<tr mat-row *matRowDef="let row ; columns:columnsToDisplay" ></tr>
+
         </table>
 
     </ng-container>
