--- a/Angular/Angular-Music/src/app/Pjesma/pjesma-edit/pjesma-edit.component.html
+++ b/Angular/Angular-Music/src/app/Pjesma/pjesma-edit/pjesma-edit.component.html
@@ -29,8 +29,10 @@
 
               <div class="mb-3">
                 <label class="form-label">Kategorija</label>
-                <select class="form-control" [(ngModel)]="urediPjesmu.kategorija_id" >
+                <select class="form-select" multiple aria-label="multiple select example"  [(ngModel)]="urediPjesmu.kategorija">
+                  <option selected>Kategorije</option>
                   <option *ngFor="let x of kategorije" value="{{x.id}}">{{x.ime}}</option>
+                  
                 </select>
               </div>
         </div>
