--- a/Angular/Angular-Music/src/app/Pjesma/pjesma-index/pjesma-index.component.html
+++ b/Angular/Angular-Music/src/app/Pjesma/pjesma-index/pjesma-index.component.html
@@ -1,85 +1,46 @@
+
 <h1>Dodaj novu pjesmu</h1>
-<button mat-flat-button color="primary" routerLink="/pjesma/nova">Dodaj pjesmu</button>
+<div class="dugme"><button mat-flat-button color="primary" routerLink="/pjesma/nova">Dodaj pjesmu</button>
+    </div>
+<p style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"> 
+
+    Filtriraj po nazivu pjesme ili izvođača<input  [(ngModel)]="ime" />
+</p>
 
 
-<app-generic-list [list]="pjesma">
 
+<table class="table table-primary" id="tt">
+    <tr>
+    <th>Naziv pjesme</th>
+    <th>Naziv izvođača</th>
+    <th>Url</th>
+    <th>Ocjena</th>
+    <th>Favorit</th>
+    <th>Datum dodavanja</th>
+    <th>Datum editovanja</th>
+    <th>Kategorija</th>
+    <th>Akcija</th>
     
-    
-
-    <ng-container content>
-        <table mat-table [dataSource]="pjesma" class="mat-elevation-z8 table-index">
-            <ng-container matColumnDef="naziv">
-                <th mat-header-cell *matHeaderCellDef>Naziv</th>
-                <td mat-cell *matCellDef="let element">{{element.naziv}}</td>
-
-            </ng-container>
-
-            <ng-container matColumnDef="nazivIzvodjaca">
-                <th mat-header-cell *matHeaderCellDef>Naziv izvođača</th>
-                <td mat-cell *matCellDef="let element ">{{element.nazivIzvodjaca}}</td>
-
-            </ng-container>
-
-            <ng-container matColumnDef="url">
-                <th mat-header-cell *matHeaderCellDef>Url</th>
-                <td mat-cell *matCellDef="let element"><a href="{{element.url}}" target="_blank"><mat-icon>play_circle_outline</mat-icon></a></td>
-                  
-
-            </ng-container>
-            <ng-container matColumnDef="ocjena">
-                <th mat-header-cell *matHeaderCellDef>Ocjena</th>
-                <td mat-cell *matCellDef="let element">{{element.ocjena}}</td>
-
-            </ng-container>
-            <ng-container matColumnDef="favorit">
-                <th mat-header-cell *matHeaderCellDef>Favorit</th>
-                <td mat-cell *matCellDef="let element">{{element.favorit}}</td>
-
-            </ng-container>
-            <ng-container matColumnDef="datumUnosaPjesme">
-                <th mat-header-cell *matHeaderCellDef>Datum unosa pjesme</th>
-                <td mat-cell *matCellDef="let element">{{element.datumUnosaPjesme | date:'dd.MM.yyyy'}}</td>
-
-            </ng-container>
-
-            <ng-container matColumnDef="datumEditovanja">
-                <th mat-header-cell *matHeaderCellDef>Datum editovanja pjesme</th>
-                <td mat-cell *matCellDef="let element">{{element.datumEditovanja | date:'dd.MM.yyyy'}}</td>
-
-            </ng-container>
-
-            <ng-container matColumnDef="kategorija">
-                <th mat-header-cell *matHeaderCellDef>Kategorija</th>
-                <td mat-cell *matCellDef="let element">{{element.kategorija!=null?element.kategorija.ime:""}}</td>
-
-            </ng-container>
-
-            <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef>Opcije</th>
-                <td mat-cell *matCellDef="let element">
-                    <a  mat-flat-button color="primary" (click)="uredi(element)">Uredi</a>
-                    <button mat-flat-button color="warn" (click)="obrisi(element.id)">
-                        Obriši
-                    </button>
-                </ng-container>
-                    
-
-           
-
-            
-            
-
-
-            
-
-<tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-<tr mat-row *matRowDef="let row ; columns:columnsToDisplay" ></tr>
-
-        </table>
-
-    </ng-container>
-</app-generic-list>
+    </tr>
+    <tbody>
+    <tr *ngFor="let s of GetPodaci()" >
+      <td>{{s.naziv}}</td>
+      <td>{{s.nazivIzvodjaca}}</td>
+     <td><a href="{{s.url}}" target="_blank"><mat-icon>play_circle_outline</mat-icon></a></td>
+     <td>{{s.ocjena}}</td>
+     <td>{{s.favorit}}</td>
+     <td>{{s.datumUnosaPjesme | date:'yyyy.mm.dd'}}</td>
+     <td>{{s.datumEditovanja | date:'yyyy.mm.dd'}}</td>
+     <td>{{s.kategorija!=null?s.kategorija.ime:""}}</td>
+     
+      <td>
+        <button (click)="obrisi(s)">Obrisi</button>
+        <button (click)="uredi(s)">Uredi</button>
+  
+      </td>
+    </tr>
+    </tbody>
+  </table>
 
 <app-pjesma-edit [urediPjesmu]="urediPjesmu"></app-pjesma-edit>
 
