--- a/Angular/Angular-Music/src/app/Pjesma/pjesma-index/pjesma-index.component.css
+++ b/Angular/Angular-Music/src/app/Pjesma/pjesma-index/pjesma-index.component.css
@@ -26,6 +26,26 @@ width: 160%;
   width: 130%;
 }
 
+table {
+  table-layout: fixed;
+  width: 120px;
+  border: 1px solid rgb(0, 26, 255);
+}
+
+td {
+  
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+th {
+  
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  text-align: center;
+}
+
 
 html {
     font-family: 'helvetica neue', helvetica, arial, sans-serif;
