p and input css

--- a/Angular/Angular-Music/src/app/Pjesma/pjesma-index/pjesma-index.component.html
+++ b/Angular/Angular-Music/src/app/Pjesma/pjesma-index/pjesma-index.component.html
@@ -2,7 +2,7 @@
 <h1>Dodaj novu pjesmu</h1>
 <div class="dugme"><button mat-flat-button color="primary" routerLink="/pjesma/nova">Dodaj pjesmu</button>
     </div>
-<p style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"> 
+<p > <mat-icon>search</mat-icon>
 
     Filtriraj po nazivu pjesme ili izvođača<input  [(ngModel)]="ime" />
 </p>
