--- a/Angular/Angular-Music/src/app/Pjesma/pjesma-index/pjesma-index.component.css
+++ b/Angular/Angular-Music/src/app/Pjesma/pjesma-index/pjesma-index.component.css
@@ -45,6 +45,16 @@ th {
   text-overflow: ellipsis;
   text-align: center;
 }
+input{
+  padding: 5px;
+  margin-left: 15px;
+  
+}
+p{
+  text-decoration: solid;
+  font-weight: 700;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 
 
 html {
